--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
      
-        <button class="new_game_btn">Nowa gra</button>
+        <button class="new_game_btn">New Game</button>
    
     <div class="memory">
    
